adds tailwind css

--- a/_posts/2020-10-15-synclink.md
+++ b/_posts/2020-10-15-synclink.md
@@ -4,6 +4,7 @@ title: "Disney SyncLink Technology"
 summary: "Responsive experience to showcase safety and automation technology."
 date: 2020-10-12
 tag: ux design
+bg: secondary
 client: Disney SyncLink Technology
 thumbnail: synclink.png
 alt: "Disney Synclink Technology website"
